# AJT-POS

./: .gitignore  README.md  license.txt  pyproject.toml
atl_pos/: api.py  guards.py  hooks.py  install.py  modules.txt
atl_pos/config/: desktop.py
atl_pos/public/js/: atl_pos.js
atl_pos/www/: atl-pos.html  atl-pos.py
