[project]
name = "atl_pos"
authors = [
    { name = "Agyeiwaa's Table Limited", email = "info@agyeiwaastable.com" },
]
description = "Branded restaurant POS console for Agyeiwaa's Table, on ERPNext + URY."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"
erpnext = ">=15.0.0,<16.0.0"
